--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <header class="header">
-        <img src="./assets/images/avatar.jpg" alt="Purple starfish"/>
-        <h1>Martha Benitez</h1>
-         <nav>
+        <div>
+            <img src="./assets/images/avatar.jpg" alt="Purple starfish"/>
+        </div>
+        <div>
+            <h1>Martha Benitez</h1>
+        </div>
+        <nav>
             <ul>
                 <li>
                     <a href="#about_menu">About Me</a>
@@ -41,22 +45,28 @@
         </section>
         <section class="projects">
             <section class="project" id="prework">
-                <img src="./assets/images/prework.jpg" alt="Image of a study guide"/>
+                <a href="https://mbenitez1607.github.io/prework-study-guide/">
+                    <img src="./assets/images/prework.jpg" alt="Image of a study guide"/>
+                </a>
                 <h3>Prework: Study Guide</h3>
             </section>
             <section class="project" id="basic_html">
-                <img src="./assets/images/html.jpg" alt="Image that says HTML"/>
+                <a href="https://mbenitez1607.github.io/module1-challenge/">
+                    <img src="./assets/images/html.jpg" alt="Image that says HTML"/>
+                </a>
                 <h3>Module 1 Challenge: HTML & CSS</h3>
             </section>
             <section class="project" id="advanced_css">
-                <img src="./assets/images/css.jpg" alt="Image showing basic CSS code"/>
+                <a href="">
+                    <img src="./assets/images/css.jpg" alt="Image showing basic CSS code"/>
+                </a>
                 <h3>Module 2 Challenge: Advanced CSS</h3>
             </section>
         </section>
-        <section id="contact_menu">
+        <section>
             <h2>Contact me</h2>
         </section>
-        <section class="contact">
+        <section class="contact" id="contact_menu">
             <div>
                 <a href="mailto:mbenitez.a@gmail.com">mbenitez.a@gmail.com</a>
             </div>
