Update Javascript live page URL

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h3>Module 1 Challenge: HTML & CSS</h3>
             </section>
             <section class="project" id="advanced_css">
-                <a href="">
+                <a href="https://mbenitez1607.github.io/module2-challenge/">
                     <img src="./assets/images/css.jpg" alt="Image showing basic CSS code"/>
                 </a>
                 <h3>Module 2 Challenge: Advanced CSS</h3>
